  - "tagtypes" can be used to hide tags
  - "find" and "search" can sort
  - "outputs" prints the plugin name
  - "outputset" sets runtime attributes
  - close connection when client sends HTTP request
  - new filter syntax for "find"/"search" etc. with negation
* database
  - simple: scan audio formats
  - proxy: require libmpdclient 2.9
  - proxy: forward `sort` and `window` to server
* player
  - "one-shot" single mode
* input
  - curl: download to buffer instead of throttling transfer
  - qobuz: new plugin to play Qobuz streams
  - tidal: new plugin to play Tidal streams
* tags
  - new tags "OriginalDate", "MUSICBRAINZ_WORKID"
* decoder
  - ffmpeg: require at least version 11.12
  - gme: try loading m3u sidecar files
  - hybrid_dsd: new decoder plugin
  - mad: move "gapless_mp3_playback" setting to "decoder" block
  - mikmod: require at least version 3.2
  - pcm: support audio/L24 (RFC 3190)
  - sidplay: support basic and kernal rom (libsidplayfp)
* resampler
  - soxr: flush resampler at end of song
* output
  - alsa: non-blocking mode
  - alsa: change "dop" and "allowed_formats" settings at runtime
  - ao: fix crash bug due to partial frames
  - shout: support the Shine encoder plugin
  - sndio: remove support for the broken RoarAudio sndio emulation
  - osx: initial support for DSD over PCM
  - httpd_output: support for unix sockets
* mixer
  - sndio: new mixer plugin
* encoder
  - opus: support for sending metadata using ogg stream chaining
* systemd watchdog support
* require GCC 6

ver 0.20.22 (not yet released)
* storage
  - curl: URL-encode paths
* Android
  - now runs as a service
  - add button to start/stop MPD
  - add option to auto-start on boot

ver 0.20.21 (2018/08/17)
* database
  - proxy: add "password" setting
  - proxy: support tags "ArtistSort", "AlbumArtistSort", "AlbumSort"
  - simple: allow .mpdignore comments only at start of line
* output
  - httpd: remove broken DLNA support code
* playlist